# ten-framework

./: README.md
.devcontainer/: devcontainer.json
.github/tools/: setup_pytest_dependencies.py
.github/workflows/: ai_agents.yaml  codeql.yml  coverage.yml  linux_arm64.yml  linux_ubuntu2204.yml  mac_arm64.yml  mac_arm64_without_rust.yml  mac_x64.yml  manual_publish_extension.yml  manual_test_asr_guarder.yml  pr_name.yml  tman_full_linux_arm64.yml  tman_full_linux_x64.yml  tman_full_mac_arm64.yml  tman_full_mac_x64.yml  tman_full_win_x64.yml  win.yml
ai_agents/: Dockerfile  docker-compose.yml
ai_agents/agents/examples/demo/: Dockerfile
ai_agents/agents/examples/demo/tenapp/: property.json
ai_agents/agents/examples/http-control/: Dockerfile
ai_agents/agents/examples/memory-memos-example/: Dockerfile
ai_agents/agents/examples/rtm-transport/: Dockerfile
ai_agents/agents/examples/speechmatics-diarization/: Dockerfile
ai_agents/agents/examples/stepfun-demo/: Dockerfile
ai_agents/agents/examples/transcription/: Dockerfile
ai_agents/agents/examples/voice-assistant-companion/: Dockerfile
ai_agents/agents/examples/voice-assistant-live2d/: Dockerfile
ai_agents/agents/examples/voice-assistant-nodejs/: Dockerfile
ai_agents/agents/examples/voice-assistant-realtime/: Dockerfile
ai_agents/agents/examples/voice-assistant-sip-twilio/: Dockerfile
ai_agents/agents/examples/voice-assistant-video/: Dockerfile
ai_agents/agents/examples/voice-assistant-with-PowerMem/: Dockerfile
ai_agents/agents/examples/voice-assistant-with-memU/: Dockerfile
ai_agents/agents/examples/voice-assistant-with-turn-detection/: Dockerfile
ai_agents/agents/examples/websocket-example/: Dockerfile
core/include/ten_utils/lib/: align.h
core/include/ten_utils/log/: log.h
core/include_internal/ten_runtime/app/: ten_property.h
core/include_internal/ten_runtime/common/: constant_str.h  loc.h  version.h
core/include_internal/ten_runtime/extension/: extension.h
core/include_internal/ten_runtime/extension_thread/: telemetry.h
core/include_internal/ten_runtime/global/: log.h
core/include_internal/ten_runtime/msg/: msg.h
core/include_internal/ten_runtime/ten_env/: ten_env.h
core/include_internal/ten_rust/: ten_rust.h
core/include_internal/ten_utils/log/: log.h
core/include_internal/ten_utils/schema/: constant_str.h
core/src/ten_manager/: Cargo.toml  build.rs
core/src/ten_manager/src/: cmd_line.rs  lib.rs  main.rs  tracing_config.rs  version.rs
core/src/ten_runtime/: BUILD_release.gn  manifest.json  output_libs.gni
core/src/ten_runtime/app/: metadata.c
core/src/ten_runtime/app/service_hub/api/: BUILD.gn
core/src/ten_runtime/binding/nodejs/native/: BUILD.gn
core/src/ten_runtime/common/: loc.c
core/src/ten_runtime/extension/: extension.c
core/src/ten_runtime/global/: log.c
core/src/ten_runtime/metadata/: metadata_info.c
core/src/ten_runtime/msg/: inline_assets.c  msg.c
core/src/ten_runtime/ten_env/: inline_assets.c
core/src/ten_rust/: BUILD.gn  Cargo.toml
core/src/ten_rust/src/: build.rs
core/src/ten_rust/src/log/: mod.rs  (+2 more)
core/src/ten_utils/: BUILD.gn  output_libs.gni
core/src/ten_utils/lib/sys/general/: BUILD.gn  align.c  busy_loop.c  string.c  thread.c  time.c
core/src/ten_utils/log/: log.c
docs/api/: log.cn.md  log.md
docs/getting-started/: websocket-voice-assistant-quick-start.cn.md  websocket-voice-assistant-quick-start.md
tests/common/client/: BUILD.gn  msgpack_tcp.h
tests/ten_manager/install_all/: BUILD.gn
tests/ten_manager/install_all/locked_mode_basic/: BUILD.gn  test_case.py
tests/ten_manager/install_all/locked_mode_basic/test_app/: manifest-lock.json
tests/ten_manager/install_all/locked_mode_missing_dependency/: BUILD.gn  test_case.py
tests/ten_manager/install_all/locked_mode_missing_dependency/test_app/: manifest.json
tests/ten_manager/install_all/locked_mode_missing_lock_file/: BUILD.gn  test_case.py
tests/ten_manager/install_all/locked_mode_missing_lock_file/test_app/: manifest.json
tests/ten_manager/install_all/locked_mode_production/: BUILD.gn  test_case.py
tests/ten_manager/install_all/locked_mode_production/test_app/: expected.json  manifest-lock.json
tests/ten_manager/install_all/locked_mode_version_mismatch/: BUILD.gn  test_case.py
tests/ten_manager/install_all/locked_mode_version_mismatch/test_app/: manifest-lock.json  manifest.json
tests/ten_manager/install_all/locked_mode_with_dev_deps/: BUILD.gn  test_case.py
tests/ten_manager/install_all/locked_mode_with_dev_deps/test_app/: expected.json  manifest-lock.json  manifest.json
tests/ten_manager/install_all/tracing_all_mode/: BUILD.gn  test_case.py
tests/ten_manager/install_all/tracing_all_mode/test_app/: manifest.json
tests/ten_manager/install_all/tracing_chrome_mode/: BUILD.gn  test_case.py
tests/ten_manager/install_all/tracing_chrome_mode/test_app/: manifest.json
tests/ten_manager/install_all/tracing_chrome_mode/test_app/ten_packages/extension/local_ext/: manifest.json
tests/ten_manager/install_all/tracing_flame_mode/: BUILD.gn  test_case.py
tests/ten_manager/install_all/tracing_flame_mode/test_app/: manifest.json
tests/ten_runtime/integration/python/: BUILD.gn
tests/ten_runtime/integration/python/standalone_test_async_python/default_async_extension_python/: manifest.json  pyproject.toml
tests/ten_runtime/integration/python/standalone_test_async_python/default_async_extension_python/tests/: pyproject.toml
tests/ten_runtime/smoke/telemetry/: multi_app.cc  single_app_export_to_console.cc  single_app_export_to_otlp.cc  single_app_export_to_prometheus.cc
tests/ten_utils/: BUILD.gn
tests/utils/: build_config.py  build_pkg.py  install_pkg.py
tools/grafana-monitoring/: README.md  docker-compose.hybrid.yml  docker-compose.pull.yml  docker-compose.push.yml
tools/grafana-monitoring/configs/hybrid/: otel-collector-config.yml  prometheus.yml
tools/grafana-monitoring/configs/pull/: prometheus.yml
tools/grafana-monitoring/configs/push/: loki-config.yml  otel-collector-config.yml  prometheus.yml
tools/tman/: install_tman.sh
(+429 files in other folders)
