#
# Copyright © 2025 Agora
# This file is part of TEN Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
group("install_all") {
  deps = [
    "extension_api_interface_not_found",
    "extension_not_listed_in_app",
    "install_a_before_install_all",
    "install_all_fail_with_local_unsupported_pkg",
    "install_all_in_local_file_system",
    "install_breaking_lock",
    "install_dependencies_of_local_pkgs",
    "install_locked_pkg_same_version",
    "install_under_the_guidance_of_lock",
    "local_dependency_link",
    "local_dependency_link_in_extension",
    "local_dependency_link_in_not_in_use_extension",
    "locked_mode_basic",
    "locked_mode_missing_dependency",
    "locked_mode_missing_lock_file",
    "locked_mode_production",
    "locked_mode_version_mismatch",
    "locked_mode_with_dev_deps",
    "not_install_again_for_installed_extension",
    "tracing_all_mode",
    "tracing_chrome_mode",
    "tracing_flame_mode",
    "update_pkgs_that_local_pkgs_depend_on",
  ]
}
