#
# Copyright © 2025 Agora
# This file is part of TEN Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/ten_runtime/glob.gni")

ten_runtime_glob("api") {
  file_list = all_native_files

  if (ten_enable_ten_rust) {
    public_deps = [ "//core/src/ten_rust:ten_rust_binding" ]
  }

  # TODO(nzh): add a proper API macro to control the export of ten_utils symbols
  # Instead of using TEN_UTILS_API
  #
  # On Windows with MinGW, api.c calls TEN_UTILS_API functions (e.g.,
  # ten_log_global_get_output_file_path) which are defined in ten_utils. Since
  # these functions are compiled as part of the same executable (e.g.,
  # ten_utils_unit_test.exe), they need to use actual symbols instead of
  # __declspec(dllimport) to avoid "undefined reference" errors.
  #
  # Why only MinGW needs this (not MSVC/Linux/macOS):
  #
  # 1. Linux/macOS: Use __attribute__((visibility("default"))) instead of
  #    __declspec(dllimport). No __imp_ prefix is generated, symbols are resolved
  #    directly.
  #
  # 2. MSVC: The MSVC linker can automatically resolve __declspec(dllimport)
  #    symbols even when they're in the same executable. MSVC's linker is more
  #    lenient and can use the actual symbol definition from the same executable.
  #
  # 3. MinGW (GCC on Windows): When GCC sees __declspec(dllimport), it generates
  #    code that references the symbol with an __imp_ prefix (e.g.,
  #    __imp_ten_log_global_get_output_file_path). This __imp_ prefix is used for
  #    importing symbols from external DLLs via import libraries. However, when
  #    linking the same executable internally, the linker only has the actual
  #    symbol (ten_log_global_get_output_file_path) available, not the __imp_
  #    prefixed version. This causes "undefined reference to __imp_..." errors.
  #
  # Solution: Define TEN_UTILS_EXPORT when compiling api so it uses
  # __declspec(dllexport) instead of __declspec(dllimport), making it reference
  # the actual symbol directly.
  if (is_win && is_mingw) {
    defines = [ "TEN_UTILS_EXPORT" ]
  }
}
