#
# Copyright © 2025 Agora
# This file is part of TEN Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/ten_utils/utils.gni")

ten_utils_glob("general") {
  deps = [
    "//core/src/ten_utils/value",
    "//third_party/yyjson",
  ]

  if (is_win && !is_mingw) {
    # MSVC uses bcrypt.lib
    libs = [ "bcrypt.lib" ]
  } else if (is_win && is_mingw) {
    # MinGW uses bcrypt (without .lib extension)
    libs = [ "bcrypt" ]
  } else if (is_mac) {
    frameworks = [ "Security.framework" ]
  }
}
